# InsureLLM

./: README.md  app.py  evaluator.py  main.py  pyproject.toml
evaluation/: eval.py
implementation/: answer.py  ingest.py
preprocessed_db/64fcc429-b879-40a6-bcf7-d3ed744100b3/: index_metadata.pickle
pro_implementation/: answer.py  ingest.py
